Sinks, working blockers.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </span>
             </li>
             <li class="button" id="button-place-blocker">
-                Item Blocker
+                Item Filter
             </li>
             <li class="button" id="button-place-source">
                 Item Source
