Allow calculation of production volumes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <li>
                 <button id="button-recalculate" class="fill">
-                    Check
+                    Recalculate
                 </button>
             </li>
             <br/>
