Fix FireFox problems.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     Factory
                 </button>
                 <button id="new-producer-type-button">
-                    <img id="selected-producer-img" src="img/grid.png"/>                   
+                    <img id="selected-producer-img" src="img/grid.png"/>
+                    <span> &#9660; </span>                  
                 </button>
             </li>
             <li class="two-button">
