Change font to Lato from Google Fonts to get more consitency.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Beltaplan Factorio planner</title>
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
         <script type="text/javascript" src="es6-collections.js">
         </script>
