Allow selection of plan version.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         </script>
         <script type="text/javascript" src="main.js">
         </script>
+        <script type="text/javascript">
+            var factorioDefaultVersion = 'base-0.12';
+            var factorioVersions = [factorioDefaultVersion];
+        </script>
     </head>
     <body>
         <div id="splash">
