Add factorio 0.13 support.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </script>
         <script type="text/javascript">
             var factorioDefaultVersion = 'base-0.12';
-            var factorioVersions = [factorioDefaultVersion];
+            var factorioVersions = ['base-0.12', 'base-0.13'];
         </script>
     </head>
     <body>
