Port example plan to 0.13 and make it more complex.
Rocket fuel production.

--- a/help.html
+++ b/help.html
@@ -81,7 +81,8 @@ factory. It helps to know how this process works, so that you can use Beltaplan 
     placed on the bus it will block items from flowing through.
 
 <h2>Usage</h2>
-<p>Move around the factory plan using <code>WSAD</code> as in Factorio.
+<p>Move around the factory plan using <code>WSAD</code> as in Factorio. To open a new clear plan, click the 
+"Open icon" in the toolbox next to plan name.
 
 <p>Select a building to place from the right toolbox and click to place. <code>R</code> rotates the building, <code>Q</code>
 cancels the placement mode. Click on buildings to select them and see details. Delete building with <code>D</code>. Click
