Support for saves in localStorage.

--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
             <img src="img/selection.svg" id="selection-rectangle"/>
             <img src="img/placement-placeholder.svg" id="placement-rectangle"/>
         </div>
+        <div id="saving-notification">Saving ...</div>
     </body>
 </html>
