--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </script>
         <script type="text/javascript">
             var factorioDefaultVersion = 'base-0.13';
-            var factorioVersions = ['base-0.12', 'base-0.13', 'base-0.14'];
+            var factorioVersions = ['base-0.12', 'base-0.13', 'base-0.14', "base-0.15"];
         </script>
     </head>
     <body class="game">
