--- a/help.html
+++ b/help.html
@@ -85,8 +85,8 @@ factory. It helps to know how this process works, so that you can use Beltaplan 
 "Open icon" in the toolbox next to plan name.
 
 <p>Select a building to place from the right toolbox and click to place. <code>R</code> rotates the building, <code>Q</code>
-cancels the placement mode. Click on buildings to select them and see details. Delete building with <code>D</code>. Click
-the right arrow near <em>Factory</em> button to select factory type.
+cancels the placement mode. Click on buildings to select them and see details. Delete building with <code>Delete</code>. Click
+the down arrow near <em>Factory</em> button to select factory type.
 
 <p>Once you are happy with the model, hit the <em>Recalculate</em> button to update the bus connections (see section above).
 
