--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <script type="text/javascript" src="main.js">
         </script>
         <script type="text/javascript">
-            var factorioDefaultVersion = 'base-0.13';
-            var factorioVersions = ['base-0.12', 'base-0.13', 'base-0.14', "base-0.15"];
+            var factorioDefaultVersion = 'base-0.17';
+            var factorioVersions = ['base-0.12', 'base-0.13', 'base-0.14', "base-0.15", "base-0.17"];
         </script>
     </head>
     <body class="game">
